--- a/tickets.html
+++ b/tickets.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Sistema de Atendimento — Supremo Tribunal de Oasis</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -16,16 +17,16 @@
   }
 </script>
 
-<!-- ================= HEADER (BARRA VERMELHA MANTIDA) ================= -->
+<!-- ================= HEADER (MANTIDO) ================= -->
 <header class="header small official">
-  <img src="logo-oasis.png" class="logo small" />
+  <img src="logo-oasis.png" class="logo" />
   <div class="header-text">
     <h1>Supremo Tribunal de Oasis</h1>
     <span>Sistema Oficial de Atendimento ao Cidadão</span>
   </div>
 </header>
 
-<!-- ================= LAYOUT GERAL ================= -->
+<!-- ================= LAYOUT ================= -->
 <div class="layout">
 
   <!-- ================= MENU LATERAL ================= -->
@@ -42,7 +43,6 @@
     <!-- ================= SOLICITAÇÕES ================= -->
     <section id="solicitacoes" class="aba active">
 
-      <!-- ❌ LOGO REMOVIDA AQUI (conforme solicitado) -->
       <div class="solicitacoes-header">
         <h2>Solicitações ao Supremo Tribunal de Oasis</h2>
         <p>Selecione abaixo o tipo de serviço desejado.</p>
@@ -111,6 +111,7 @@
     <!-- ================= TABELA DE SERVIÇOS ================= -->
     <section id="precos" class="aba">
       <div class="documento-oficial">
+
         <div class="doc-header">
           <h2>⚖️ Serviços Disponíveis ao Público</h2>
           <span>Supremo Tribunal de Oasis</span>
@@ -160,6 +161,7 @@
             <li>A partir da 4ª ocorrência — <strong>$ 10.000</strong></li>
           </ul>
         </div>
+
       </div>
     </section>
 
