--- a/tickets.html
+++ b/tickets.html
@@ -1,194 +1,84 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <title>Sistema de Atendimento — Supremo Tribunal de Oasis</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Painel da Coordenação — Oasis</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bg-paper official">
 
-<!-- 🔐 PROTEÇÃO -->
 <script>
   const usuario = JSON.parse(localStorage.getItem("usuario"));
-  if (!usuario || usuario.nivel !== "cidadao") {
-    location.href = "index.html";
-  }
+  if (!usuario || usuario.nivel !== "coordenacao") location.href = "index.html";
 </script>
 
-<!-- ================= HEADER ================= -->
-<header class="header small official">
-  <img src="logo-oasis.png" class="logo" />
+<header class="header official">
+  <img src="logo-oasis.png" class="logo">
   <div class="header-text">
-    <h1>Supremo Tribunal de Oasis</h1>
-    <span>Sistema Oficial de Atendimento ao Cidadão</span>
+    <h1>👑 Coordenação</h1>
+    <span>Supremo Tribunal de Oasis</span>
   </div>
 </header>
 
-<!-- ================= LAYOUT ================= -->
-<div class="layout">
+<nav class="nav-bar sidebar official">
+  <button onclick="mostrarAba('tickets')">📂 Tickets</button>
+  <button onclick="mostrarAba('logs')">📜 Logs</button>
+  <button onclick="sair()">🚪 Sair</button>
+</nav>
 
-  <!-- ================= MENU LATERAL ================= -->
-  <nav class="nav-bar sidebar official">
-    <button onclick="irAba('solicitacoes')">📂 Solicitações</button>
-    <button onclick="irAba('andamento')">🕒 Em andamento</button>
-    <button onclick="irAba('precos')">💰 Tabela de Serviços</button>
-    <button onclick="sair()">🚪 Encerrar Sessão</button>
-  </nav>
+<main class="content official">
 
-  <!-- ================= CONTEÚDO ================= -->
-  <main class="content official">
+<section id="tickets" class="aba active">
+  <h2>Controle Geral</h2>
+  <div id="listaTickets"></div>
+</section>
 
-    <!-- ================= SOLICITAÇÕES ================= -->
-    <section id="solicitacoes" class="aba active">
-      <div class="solicitacoes-header">
-        <h2>Solicitações ao Supremo Tribunal de Oasis</h2>
-        <p>Selecione abaixo o tipo de serviço desejado.</p>
-      </div>
+<section id="logs" class="aba">
+  <h2>Auditoria</h2>
+  <div id="listaLogs"></div>
+</section>
 
-      <div class="bloco-servicos">
-        <h3>💍 Serviços Civis</h3>
-        <div class="grid-servicos">
-          <button onclick="abrirCategoria('Casamento')">Casamento</button>
-          <button onclick="abrirCategoria('Divórcio')">Divórcio</button>
-          <button onclick="abrirCategoria('Nascimento')">Nascimento</button>
-          <button onclick="abrirCategoria('Adoção')">Adoção</button>
-          <button onclick="abrirCategoria('Troca de Nome')">Troca de Nome</button>
-        </div>
-      </div>
+</main>
 
-      <div class="bloco-servicos">
-        <h3>⚖️ Serviços Jurídicos</h3>
-        <div class="grid-servicos">
-          <button onclick="abrirCategoria('Porte de Arma')">Porte de Arma</button>
-          <button onclick="abrirCategoria('Limpeza de Ficha')">Limpeza de Ficha</button>
-          <button onclick="abrirCategoria('Jovem Aprendiz')">Jovem Aprendiz</button>
-        </div>
-      </div>
+<script type="module">
+import { collection, onSnapshot } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { db } from "./firebase.js";
 
-      <div class="bloco-servicos">
-        <h3>🏛️ Demandas Administrativas</h3>
-        <div class="grid-servicos">
-          <button onclick="abrirCategoria('Denúncia')">Denúncia</button>
-          <button onclick="abrirCategoria('Falar com o Juiz')">Falar com o Juiz</button>
-          <button onclick="abrirCategoria('Processos')">Processos</button>
-          <button onclick="abrirCategoria('Suporte')">Suporte</button>
-        </div>
-      </div>
-    </section>
-
-    <!-- ================= EM ANDAMENTO ================= -->
-    <section id="andamento" class="aba">
-      <h2>🕒 Tickets em Andamento</h2>
-      <p class="section-desc">Selecione uma categoria.</p>
-      <div id="categoriasTickets" class="categoria-grid"></div>
-
-      <div id="listaPorCategoria" class="lista-categoria hidden">
-        <button class="btn-secondary" onclick="voltarCategorias()">⬅ Voltar</button>
-        <h3 id="tituloCategoria"></h3>
-        <div id="ticketsCategoria" class="card-list"></div>
-      </div>
-    </section>
-
-    <!-- ================= CHAT ================= -->
-    <section id="chat" class="aba">
-      <h2 id="chatTitulo">💬 Atendimento</h2>
-      <div id="mensagens" class="chat-box"></div>
-
-      <div class="chat-input">
-        <input id="mensagem" placeholder="Digite sua mensagem..." />
-        <input type="file" id="arquivo" />
-        <button onclick="enviarMensagem()">Enviar</button>
-        <button class="btn-secondary" onclick="irAba('andamento')">⬅ Voltar</button>
-      </div>
-    </section>
-
-    <!-- ================= TABELA DE SERVIÇOS (REFINADA) ================= -->
-    <section id="precos" class="aba">
-      <article class="documento-oficial">
-
-        <header class="doc-header">
-          <h2>⚖️ Tabela Oficial de Serviços</h2>
-          <span>Supremo Tribunal de Oasis</span>
-          <div class="selo-oficial">DOCUMENTO OFICIAL • USO INSTITUCIONAL</div>
-        </header>
-
-        <section class="price-card">
-          <h3>🏛️ Atendimentos Jurídicos</h3>
-          <ul>
-            <li><span>Delegacia Sul</span><strong>$ 20.000</strong></li>
-            <li><span>Delegacia PRF</span><strong>$ 30.000</strong></li>
-          </ul>
-        </section>
-
-        <section class="price-card">
-          <h3>🔫 Porte de Arma</h3>
-          <ul>
-            <li><span>Emissão de porte legal</span><strong>$ 20.000</strong></li>
-          </ul>
-        </section>
-
-        <section class="price-card">
-          <h3>💍 Certidões Civis</h3>
-          <ul>
-            <li><span>Casamento</span><strong>$ 150.000</strong></li>
-            <li><span>Divórcio</span><strong>$ 200.000</strong></li>
-            <li><span>Troca de Nome</span><strong>$ 250.000</strong></li>
-            <li><span>Adoção</span><strong>$ 50.000</strong></li>
-            <li><span>Nascimento</span><strong>$ 50.000</strong></li>
-            <li><span>Jovem Aprendiz</span><strong>$ 30.000</strong></li>
-          </ul>
-        </section>
-
-        <section class="price-card">
-          <h3>🏢 Alvará de Funcionamento</h3>
-          <ul>
-            <li><span>Abertura</span><strong>$ 150.000</strong></li>
-            <li><span>Renovação</span><strong>$ 60.000</strong></li>
-          </ul>
-        </section>
-
-        <section class="price-card">
-          <h3>🧾 Ações Jurídicas</h3>
-          <ul>
-            <li><span>Ação Judicial</span><strong>$ 50.000</strong></li>
-            <li><span>Limpeza de Ficha Criminal</span><strong>$ 50.000</strong></li>
-            <li><span>A partir da 4ª ocorrência</span><strong>$ 10.000</strong></li>
-          </ul>
-        </section>
-
-      </article>
-    </section>
-
-    <!-- ================= RODAPÉ ================= -->
-    <footer class="footer">
-      <div>Sistema institucional — acesso monitorado</div>
-      <div>Site desenvolvido por <strong>Hinara Heloar</strong> — direitos reservados</div>
-    </footer>
-
-  </main>
-</div>
-
-<!-- ================= CONTROLE DE ABAS ================= -->
-<script>
-function mostrarAba(id) {
+window.mostrarAba = id => {
   document.querySelectorAll(".aba").forEach(a => a.classList.remove("active"));
-  const alvo = document.getElementById(id);
-  if (alvo) alvo.classList.add("active");
-}
-function irAba(id) {
-  location.hash = id;
-  mostrarAba(id);
-}
-function sair() {
+  document.getElementById(id).classList.add("active");
+};
+window.sair = () => {
   localStorage.clear();
   location.href = "index.html";
-}
-const hash = location.hash.replace("#", "");
-mostrarAba(hash || "solicitacoes");
-</script>
+};
 
-<script type="module" src="script.js"></script>
+onSnapshot(collection(db,"tickets"), snap => {
+  const box = document.getElementById("listaTickets");
+  box.innerHTML = "";
+  snap.forEach(d => {
+    const t = d.data();
+    box.innerHTML += `
+      <div class="price-card">
+        <strong>${t.categoria} — ${t.nome} ${t.cid}</strong><br>
+        Status: ${t.status}
+      </div>`;
+  });
+});
+
+onSnapshot(collection(db,"logs"), snap => {
+  const box = document.getElementById("listaLogs");
+  box.innerHTML = "";
+  snap.forEach(d => {
+    const l = d.data();
+    box.innerHTML += `
+      <div class="price-card">
+        ${l.acao}<br>
+        ${l.usuario} — ${l.cid}
+      </div>`;
+  });
+});
+</script>
 </body>
 </html>
