--- a/staff/dashboard.html
+++ b/staff/dashboard.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../style.css">
 </head>
 
-<body class="bg-paper">
+<body class="bg-paper official">
 
 <!-- 🔐 PROTEÇÃO -->
 <script>
@@ -42,6 +42,20 @@
   <div id="listaProcessos" class="card-list"></div>
 </section>
 
+<!-- ================= CHAT ================= -->
+<section id="chat" class="aba">
+  <h3 id="chatTitulo">💬 Atendimento Jurídico</h3>
+
+  <div id="mensagens" class="chat-box official"></div>
+
+  <div class="chat-input official">
+    <input id="mensagem" placeholder="Digite sua resposta..." />
+    <input type="file" id="arquivo" />
+    <button onclick="enviarMensagem()">Enviar</button>
+    <button class="btn-secondary" onclick="mostrarAba('processos')">⬅ Voltar</button>
+  </div>
+</section>
+
 <!-- ================= HISTÓRICO ================= -->
 <section id="historico" class="aba">
   <h3>📜 Histórico Oficial</h3>
@@ -59,12 +73,14 @@ import {
   query,
   where
 } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
 import { db } from "../firebase.js";
+import { abrirChat } from "./juridico.js";
 
 /* 🔁 ABAS */
 window.mostrarAba = id => {
   document.querySelectorAll(".aba").forEach(a => a.classList.remove("active"));
-  document.getElementById(id).classList.add("active");
+  document.getElementById(id)?.classList.add("active");
 };
 
 /* 🚪 SAIR */
@@ -82,19 +98,33 @@ onSnapshot(
 
     snap.forEach(d => {
       const t = d.data();
+
       box.innerHTML += `
         <div class="price-card">
           <b>${t.categoria}</b><br>
           Cidadão: ${t.nome}<br>
           CID: ${t.cid}<br><br>
 
-          <button onclick="abrirChat('${d.id}')">💬 Abrir Atendimento</button>
-          <button onclick="encerrar('${d.id}')">🔒 Encerrar Ticket</button>
+          <button onclick="abrirAtendimento('${d.id}', '${t.categoria}', '${t.nome}', '${t.cid}')">
+            💬 Abrir Atendimento
+          </button>
+          <button onclick="encerrar('${d.id}')">
+            🔒 Encerrar Ticket
+          </button>
         </div>
       `;
     });
   }
 );
+
+/* 💬 ABRIR CHAT */
+window.abrirAtendimento = (id, categoria, nome, cid) => {
+  document.getElementById("chatTitulo").innerText =
+    `💬 ${categoria} — ${nome} ${cid}`;
+
+  mostrarAba("chat");
+  abrirChat(id);
+};
 
 /* 🔒 ENCERRAR */
 window.encerrar = async id => {
@@ -103,13 +133,6 @@ window.encerrar = async id => {
   });
   alert("Ticket encerrado com sucesso.");
 };
-
-/* 💬 CHAT */
-window.abrirChat = id => {
-  localStorage.setItem("ticketStaff", id);
-  location.href = "chat.html";
-};
-
 </script>
 
 </body>
